[gd_scene load_steps=14 format=3 uid="uid://d3n68qsk4ytm8"]

[ext_resource type="Script" path="res://ui_scenes/mainMenu/saveSlot/saveslot.gd" id="1_gmxib"]
[ext_resource type="Texture2D" uid="uid://csibj827o7h0h" path="res://ui_scenes/mainMenu/saveSlot/rect.png" id="2_82fot"]
[ext_resource type="Texture2D" uid="uid://dsqy1vjtqj0pm" path="res://object_scenes/player/sprites/fullbody.png" id="3_lna7b"]
[ext_resource type="PackedScene" uid="uid://d0j06gpiq8jxo" path="res://ui_scenes/mainMenu/textbutton/text_button.tscn" id="3_neipt"]
[ext_resource type="Texture2D" uid="uid://dei6me4j1chus" path="res://object_scenes/player/sprites/layerHandFront.png" id="4_4ppld"]
[ext_resource type="Texture2D" uid="uid://cf6d0p2lx87r6" path="res://ui_scenes/mainMenu/saveSlot/downloadsaveweb.png" id="4_ej4s7"]
[ext_resource type="Texture2D" uid="uid://bpp4hllnjnie8" path="res://object_scenes/player/sprites/layerEyepupilmenu.png" id="4_td14f"]
[ext_resource type="Texture2D" uid="uid://boq0n7atn706h" path="res://items/armors/gold/hatArmor.png" id="5_chulh"]
[ext_resource type="Texture2D" uid="uid://cj10ixkx70nfg" path="res://items/armors/gold/legsArmor.png" id="6_f2hmh"]
[ext_resource type="Texture2D" uid="uid://cjmdx6dp4yqt6" path="res://items/armors/gold/chestArmor.png" id="7_4vnq2"]

[sub_resource type="Animation" id="Animation_y2jia"]
resource_name = "default"
length = 0.8
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [1],
"method": &"setAllFrames"
}, {
"args": [2],
"method": &"setAllFrames"
}, {
"args": [3],
"method": &"setAllFrames"
}, {
"args": [4],
"method": &"setAllFrames"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dw8q"]
_data = {
"default": SubResource("Animation_y2jia")
}

[sub_resource type="LabelSettings" id="LabelSettings_dnryp"]
outline_size = 3
outline_color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="saveslot" type="Container"]
custom_minimum_size = Vector2(380, 50)
offset_right = 109.0
offset_bottom = 49.0
script = ExtResource("1_gmxib")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(380, 50)
layout_mode = 2
texture = ExtResource("2_82fot")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="emptyslot" type="Label" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.372549)
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="createNew" type="Node2D" parent="."]
visible = false

[node name="create" parent="createNew" instance=ExtResource("3_neipt")]
offset_left = 318.0
offset_top = 16.0
offset_right = 359.0
offset_bottom = 33.0
buttonText = "create"

[node name="info" type="Node2D" parent="."]

[node name="download" type="Sprite2D" parent="info"]
visible = false
position = Vector2(357, 25)
texture = ExtResource("4_ej4s7")

[node name="download" type="Button" parent="info/download"]
modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="info"]
libraries = {
"": SubResource("AnimationLibrary_6dw8q")
}
autoplay = "default"
speed_scale = 1.8

[node name="playermodel" type="Node2D" parent="info"]
position = Vector2(27, 22)
scale = Vector2(2, 2)

[node name="body" type="Sprite2D" parent="info/playermodel"]
modulate = Color(1, 0.784314, 0.333333, 1)
texture = ExtResource("3_lna7b")
hframes = 10

[node name="eye" type="Sprite2D" parent="info/playermodel"]
texture = ExtResource("4_td14f")
hframes = 10

[node name="armorhead" type="Sprite2D" parent="info/playermodel"]
texture = ExtResource("5_chulh")
hframes = 3
vframes = 5

[node name="armorLeg" type="Sprite2D" parent="info/playermodel"]
texture = ExtResource("6_f2hmh")
hframes = 3
vframes = 5

[node name="armorBody" type="Sprite2D" parent="info/playermodel"]
texture = ExtResource("7_4vnq2")
hframes = 3
vframes = 5

[node name="hand" type="Sprite2D" parent="info/playermodel"]
modulate = Color(1, 0.784314, 0.333333, 1)
texture = ExtResource("4_4ppld")
hframes = 10

[node name="play" parent="info" instance=ExtResource("3_neipt")]
offset_left = 259.0
offset_top = 17.0
offset_right = 286.0
offset_bottom = 34.0
buttonText = "play"

[node name="delete" parent="info" instance=ExtResource("3_neipt")]
modulate = Color(0.866667, 0.0705882, 0.109804, 1)
offset_left = 315.0
offset_top = 17.0
offset_right = 354.0
offset_bottom = 34.0
buttonText = "delete"

[node name="h" type="HBoxContainer" parent="info"]
offset_left = 46.0
offset_top = 5.0
offset_right = 255.0
offset_bottom = 45.0
alignment = 1

[node name="worldName" type="Label" parent="info/h"]
layout_mode = 2
text = "poop galaxy"
label_settings = SubResource("LabelSettings_dnryp")

[node name="sep" type="Label" parent="info/h"]
self_modulate = Color(1, 1, 1, 0.372549)
layout_mode = 2
text = "  "
horizontal_alignment = 1

[node name="playtime" type="Label" parent="info/h"]
self_modulate = Color(1, 1, 1, 0.372549)
layout_mode = 2
text = "1h 23m"
horizontal_alignment = 1

[node name="renameWorld" type="Button" parent="info"]
modulate = Color(1, 1, 1, 0)
offset_left = 47.0
offset_top = 10.0
offset_right = 245.0
offset_bottom = 40.0

[connection signal="pressed" from="createNew/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="info/download/download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="info/play" to="." method="_on_text_button_pressed"]
[connection signal="pressed" from="info/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="info/renameWorld" to="." method="_on_rename_world_pressed"]
